<resources>
    <string name="app_name">CaseDetail</string>
    <string name="cd_verify">核实</string>
    <string name="cd_close">核查</string>
    <string name="cd_supplement">案件补充</string>
    <string name="cd_modify">案件修改</string>
    <string name="cd_dispose">案件处置</string>
    <string name="sm_describe">补充材料文字描述</string>
    <string name="user_done">上传</string>
    <string name="sm_confirm">确认保存</string>
    <string name="cr_not_urgent">非紧急</string>
    <string name="cr_urgent">紧急</string>
    <string name="cm_describe">案件文字描述</string>
    <string name="cr_modify">案件类别修改</string>
    <string name="cm_confirm">确认修改</string>
    <string name="toast_describe_cannot_be_empty">描述不能为空</string>
    <string name="noMaterial">暂无补充材料</string>
    <string name="dialog_category">分类</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="cd_check_case_realness">请核实该案件是否属实？</string>
    <string name="cd_dispose_case_realness">请选择如何处置该案件？</string>
    <string name="cd_true_case">真实案件</string>
    <string name="cd_true_dispose">处置</string>
    <string name="cd_false_case">虚假案件</string>
    <string name="cd_false_dispose">不必处置</string>
    <string name="ce_title">核查案件</string>
    <string name="ce_qualified">合格</string>
    <string name="ce_unqualified">不合格</string>
    <string name="ce_evaluation_text">文字描述</string>
    <string name="ce_confirm">确认核查</string>
</resources>
