<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cd_dispose_case_realness"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/font_large"
        android:layout_marginTop="@dimen/spacing_huge"
        android:textColor="@color/grey_text_dark"/>

    <Button
        style="@style/ActionButton"
        android:text="@string/cd_true_dispose"
        android:id="@+id/btn_true_dispose"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_huge"/>

    <Button
        style="@style/ActionButton"
        android:text="@string/cd_false_dispose"
        android:id="@+id/btn_false_dispose"
        android:layout_alignTop="@+id/btn_true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/spacing_large"/>
</RelativeLayout>