<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_confirm"
        android:layout_below="@+id/include"
        android:background="@color/grey_divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/include"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_bg_dark"
                android:orientation="horizontal"
                android:padding="@dimen/spacing_small">

                <ImageView
                    android:id="@+id/iv_location"
                    style="@style/LittleImageView"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/spacing_small"

                    android:src="@drawable/location_report" />

                <TextView
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_small"
                    android:background="@null"
                    android:text=""
                    android:textColor="@color/white" />

            </LinearLayout>


            <View style="@style/BaseDivider" />

            <LinearLayout
                style="@style/BaseContentLayoutWithPadding"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rl_not_urgent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_not_urgent"
                            style="@style/TinyImageView"
                            android:src="@drawable/not_urgent_report_checked" />

                        <TextView
                            android:id="@+id/tv_not_urgent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_small"
                            android:text="@string/cr_not_urgent"
                            android:textColor="@color/blue_text" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_urgent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_urgent"
                            style="@style/TinyImageView"
                            android:src="@drawable/urgent_report" />

                        <TextView
                            android:id="@+id/tv_urgent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_small"
                            android:text="@string/cr_urgent"
                            android:textColor="@color/grey_text" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <View style="@style/BaseDivider" />

            <EditText
                android:textCursorDrawable="@drawable/color_cursor"
                android:id="@+id/et_describe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height_large"
                android:layout_margin="@dimen/spacing_small"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/cm_describe"
                android:textColor="@color/grey_text_dark"
                android:textColorHint="@color/grey_hint" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/ll_pic"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_take_pic"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginLeft="@dimen/spacing_small"
                        android:src="@drawable/take_photo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/spacing_small"
                        android:layout_marginRight="@dimen/spacing_small"
                        android:text="发照片"
                        android:textColor="@color/grey_text" />
                </LinearLayout>
            </HorizontalScrollView>

            <View
                style="@style/BaseDivider"
                android:layout_marginTop="@dimen/spacing_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">


                <ImageView
                    android:id="@+id/iv_record"
                    style="@style/TinyImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/microphone_report" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/git_listener"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@id/iv_record"
                    android:src="@drawable/listener"
                    android:visibility="invisible"/>

                <ImageView
                    android:id="@+id/iv_play"
                    style="@style/TinyImageView"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:layout_toLeftOf="@+id/iv_record"
                    android:src="@drawable/play"
                    android:visibility="invisible"
                    />

                <TextView
                    android:id="@+id/tv_record_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="40dp"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:text="@string/user_done"/>
            </RelativeLayout>

            <View
                style="@style/BaseDivider"
                android:layout_height="10dp" />

            <RelativeLayout
                style="@style/BaseContentLayoutWithPadding"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/spacing_small"
                    android:layout_toLeftOf="@+id/btn_category_modify"
                    android:text=""
                    android:textColor="@color/grey_text_dark" />

                <Button
                    android:id="@+id/btn_category_modify"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/button_height_short"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/btn_info_window_shape"
                    android:text="@string/cr_modify"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <View style="@style/BaseDivider" />

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/include"
        layout="@layout/main_title" />

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/grey_bg"
        android:gravity="center"
        android:text="@string/cm_confirm"
        android:textColor="@color/white" />
</RelativeLayout>