<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/main_title" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        style="@style/BaseContentLayoutWithPadding"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:background="@color/grey_bg">

        <ImageView
            android:id="@+id/iv_first"
            style="@style/NormalHeadImageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/testhead" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_first"
            android:layout_marginLeft="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_normal"
            android:layout_toEndOf="@+id/iv_first"
            android:layout_toRightOf="@+id/iv_first"
            android:text="后厂村路"
            android:textColor="@color/white"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_location"
            android:layout_alignStart="@+id/tv_location"
            android:layout_below="@+id/tv_location"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="紧急状态"
            android:textColor="@color/grey_text"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_degree"
            android:layout_alignBottom="@+id/tv_degree"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_toEndOf="@+id/tv_degree"
            android:layout_toRightOf="@+id/tv_degree"
            android:text="时间"
            android:textColor="@color/grey_text" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_duration"
            android:layout_alignBottom="@+id/tv_duration"
            android:layout_marginLeft="@dimen/spacing_small"
            android:layout_toEndOf="@+id/tv_duration"
            android:layout_toRightOf="@+id/tv_duration"
            android:text="审查状态"
            android:textColor="@color/grey_text" />
    </RelativeLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tb_case_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="@color/grey_bg_dark"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/blue_text"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/blue_text"
        app:tabTextColor="@color/grey_text" />

    <android.support.v4.view.ViewPager
        android:layout_marginBottom="50dp"
        android:id="@+id/vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tb_case_detail"
        android:layout_weight="1"
        android:background="#ffffff" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_bar_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/btn_case_verify"
            style="@style/TabLayout"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView19"
                    style="@style/LittleImageView"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/check" />

                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:text="@string/cd_verify"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_case_close"
            style="@style/TabLayout"
            android:visibility="visible">
            <View style="@style/VerticalDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView20"
                    style="@style/LittleImageView"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/case_close" />

                <TextView
                    android:id="@+id/textView43"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:text="@string/cd_close"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_case_supply"
            style="@style/TabLayout"
            android:visibility="gone">

            <View style="@style/VerticalDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView21"
                    style="@style/LittleImageView"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/supply" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:text="@string/cd_supplement"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/btn_case_modify"
            style="@style/TabLayout"
            android:visibility="visible">

            <View style="@style/VerticalDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView22"
                    style="@style/LittleImageView"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/modify" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:text="@string/cd_modify"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/btn_case_dispose"
            style="@style/TabLayout"
            android:visibility="visible">

            <View style="@style/VerticalDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView23"
                    style="@style/LittleImageView"
                    android:layout_marginTop="3dp"
                    android:src="@drawable/modify" />

                <TextView
                    android:id="@+id/textView46"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:text="@string/cd_dispose"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
